// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallClipRotateMultiple> mount to match snapshot: enzyme.mount 1`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_e4ewoo 1s 0s ease-in-out infinite;
  border: 2px solid #ffffff;
  border-bottom-color: transparent;
  border-radius: 100%;
  border-top-color: transparent;
  height: 35px;
  left: -20px;
  position: absolute;
  top: -20px;
  width: 35px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_e4ewoo 1s 0s ease-in-out infinite;
}

.css-0 > div:last-child,
[data-css-0] > div:last-child {
  animation-direction: reverse;
  animation-duration: 0.5s;
  border-color: #ffffff transparent #ffffff transparent;
  display: inline-block;
  height: 15px;
  left: -10px;
  top: -10px;
  width: 15px;
  -webkit-animation-direction: reverse;
  -webkit-animation-duration: 0.5s;
}

<BallClipRotateMultiple
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
    <div />
  </div>
</BallClipRotateMultiple>
`;

exports[`<BallClipRotateMultiple> render to match snapshot: enzyme.render 1`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_e4ewoo 1s 0s ease-in-out infinite;
  border: 2px solid #ffffff;
  border-bottom-color: transparent;
  border-radius: 100%;
  border-top-color: transparent;
  height: 35px;
  left: -20px;
  position: absolute;
  top: -20px;
  width: 35px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_e4ewoo 1s 0s ease-in-out infinite;
}

.css-0 > div:last-child,
[data-css-0] > div:last-child {
  animation-direction: reverse;
  animation-duration: 0.5s;
  border-color: #ffffff transparent #ffffff transparent;
  display: inline-block;
  height: 15px;
  left: -10px;
  top: -10px;
  width: 15px;
  -webkit-animation-direction: reverse;
  -webkit-animation-duration: 0.5s;
}

<div
  data-css-0=""
>
  <div />
  <div />
</div>
`;

exports[`<BallClipRotateMultiple> shallow to match snapshot: enzyme.shallow 1`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_e4ewoo 1s 0s ease-in-out infinite;
  border: 2px solid #ffffff;
  border-bottom-color: transparent;
  border-radius: 100%;
  border-top-color: transparent;
  height: 35px;
  left: -20px;
  position: absolute;
  top: -20px;
  width: 35px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_e4ewoo 1s 0s ease-in-out infinite;
}

.css-0 > div:last-child,
[data-css-0] > div:last-child {
  animation-direction: reverse;
  animation-duration: 0.5s;
  border-color: #ffffff transparent #ffffff transparent;
  display: inline-block;
  height: 15px;
  left: -10px;
  top: -10px;
  width: 15px;
  -webkit-animation-direction: reverse;
  -webkit-animation-duration: 0.5s;
}

<div
  data-css-0=""
>
  <div />
  <div />
</div>
`;
